Actions
Bug #13754
opensendmail: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors:
mail.local.c: In function 'store': mail.local.c:531: error: 'hfp' may be used uninitialized in this function [-Wuninitialized] *** Error code 1 dmake: Fatal error: Command failed for target `mail.local.o' Current working directory /code/illumos-gate/usr/src/cmd/sendmail/util mailcompat.c: In function 'main': mailcompat.c:89:5: error: 'p' may be used uninitialized in this function [-Werror=maybe-uninitialized] pw = getpwnam(myname); ~~~^~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors rfc2047.c: In function 'decode_rfc2047': rfc2047.c:263:37: error: 'c4' may be used uninitialized in this function [-Werror=maybe-uninitialized] if (pp < endofmime && c3 != -1 && ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~ c4 != -1) { ~~~~~~~~ rfc2047.c:252:37: error: 'c3' may be used uninitialized in this function [-Werror=maybe-uninitialized] if (pp < endofmime && c2 != -1 && ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~ c3 != -1) { ~~~~~~~~ rfc2047.c:242:37: error: 'c2' may be used uninitialized in this function [-Werror=maybe-uninitialized] if (pp < endofmime && c1 != -1 && ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~ c2 != -1) { ~~~~~~~~ rfc2047.c:244:18: error: 'c1' may be used uninitialized in this function [-Werror=maybe-uninitialized] *q++ = (c1 << 2) | (c2 >> 4); ~~~~^~~~~ cc1: all warnings being treated as errors vacation.c: In function 'main': vacation.c:244:13: error: 'sender' may be used uninitialized in this function [-Werror=maybe-uninitialized] shortfrom = sender; ~~~~~~~~~~^~~~~~~~ vacation.c:216:6: error: 'p' may be used uninitialized in this function [-Werror=maybe-uninitialized] pw = getpwnam(myname); ~~~^~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors dbm/dbm.c: In function '__db_dbm_nextkey': dbm/dbm.c:139: error: 'item.dsize' may be used uninitialized in this function [-Wuninitialized] dbm/dbm.c: In function '__db_dbm_firstkey': dbm/dbm.c:123: error: 'item.dsize' may be used uninitialized in this function [-Wuninitialized] dbm/dbm.c: In function '__db_dbm_fetch': dbm/dbm.c:110: error: 'item.dsize' may be used uninitialized in this function [-Wuninitialized] *** Error code 1 dmake: Fatal error: Command failed for target `dbm.o' Current working directory /code/illumos-gate/usr/src/cmd/sendmail/db
Actions