usr/src/cmd/sendmail/util/mail.local.c
@@ -13,19 +13,6 @@
  * Use is subject to license terms.
  */
 
-#ifndef lint
-static char copyright[] =
-"@(#) Copyright (c) 1990, 1993, 1994\n\
-	The Regents of the University of California.  All rights reserved.\n";
-#endif /* not lint */
-
-#pragma ident  "%Z%%M% %I%     %E% SMI"
-
-#ifndef lint
-static char sccsid[] = "@(#)mail.local.c	8.83 (Berkeley) 12/17/98";
-static char sccsi2[] = "%W% (Sun) %G%";
-#endif /* not lint */
-
 #include <sys/param.h>
 #include <sys/stat.h>
 #include <sys/socket.h>
@@ -391,7 +378,7 @@ dolmtp(bouncequota)
 					p = strchr(rcpt_addr[i], '+');
 					if (p != NULL)
 						*p++ = '\0';
-					deliver(hfd, bfd, rcpt_addr[i], 
+					deliver(hfd, bfd, rcpt_addr[i],
 						bouncequota);
 				}
 				close(bfd);
@@ -528,7 +515,7 @@ store(from, lmtprcpts)
 	bool fullline = TRUE;	/* current line is terminated */
 	bool prevfl;		/* previous line was terminated */
 	char line[MAXLINE];
-	FILE *bfp, *hfp;
+	FILE *bfp, *hfp = NULL;
 	char *btn, *htn;
 	int in_header_section;
 	int newfd;
