usr/src/cmd/sendmail/util/rfc2047.c
@@ -35,15 +35,15 @@ static char sccsi2[] = "%W% (Sun) %G%";
  *
  * Copyright (c) 1991 Bell Communications Research, Inc. (Bellcore)
  *
- * Permission to use, copy, modify, and distribute this material 
- * for any purpose and without fee is hereby granted, provided 
- * that the above copyright notice and this permission notice 
- * appear in all copies, and that the name of Bellcore not be 
- * used in advertising or publicity pertaining to this 
- * material without the specific, prior written permission 
- * of an authorized representative of Bellcore.  BELLCORE 
- * MAKES NO REPRESENTATIONS ABOUT THE ACCURACY OR SUITABILITY 
- * OF THIS MATERIAL FOR ANY PURPOSE.  IT IS PROVIDED "AS IS", 
+ * Permission to use, copy, modify, and distribute this material
+ * for any purpose and without fee is hereby granted, provided
+ * that the above copyright notice and this permission notice
+ * appear in all copies, and that the name of Bellcore not be
+ * used in advertising or publicity pertaining to this
+ * material without the specific, prior written permission
+ * of an authorized representative of Bellcore.  BELLCORE
+ * MAKES NO REPRESENTATIONS ABOUT THE ACCURACY OR SUITABILITY
+ * OF THIS MATERIAL FOR ANY PURPOSE.  IT IS PROVIDED "AS IS",
  * WITHOUT ANY EXPRESS OR IMPLIED WARRANTIES.
  */
 
@@ -224,7 +224,7 @@ decode_rfc2047(char *str, char *dst, char *charset)
 				}
 			} else {
 				/* base64 */
-				int c1, c2, c3, c4;
+				int c1 = 0, c2 = 0, c3 = 0, c4 = 0;
 
 				pp = startofmime;
 				while (pp < endofmime) {
